Some style and font changed

--- a/src/components/Package/Package.css
+++ b/src/components/Package/Package.css
@@ -10,7 +10,7 @@
 .card{
     width: 400px;
     height: 650px;
-    border: 1px solid cyan;
+    border: 1px solid lightblue;
     border-radius: 10px;
     
 }
