--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,12 @@
   color: #61dafb;
 }
 
+body{
+  font-family: 'Poppins', sans-serif;
+}
+
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
