--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,19 +1,19 @@
-.packages-container{
+/* .footer-section{
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(4,1fr);
     grid-gap: 10px;
-    margin-left: 30px;
+    margin: 10px;
     
 }
 @media only screen and (max-width: 688px) {
-    .packages-container{
+    .footer-section{
         grid-template-columns: repeat(1,1fr);
     }
 }
 
 @media only screen and (min-width: 689px) and (max-width: 991px) {
-    .packages-container{
+    .footer-section{
         grid-template-columns: repeat(2,1fr);
     }
 
-}
+} */
