--- a/src/components/Packages/Packages.css
+++ b/src/components/Packages/Packages.css
@@ -3,6 +3,7 @@
     grid-template-columns: repeat(3,1fr);
     grid-gap: 10px;
     margin-left: 10px;
+    margin-top: 100px;
     
 }
 @media only screen and (max-width: 688px) {
