update client side create done

--- a/src/components/Review/Review.css
+++ b/src/components/Review/Review.css
@@ -2,3 +2,8 @@
     margin-top: 100px;
     margin-bottom: 100px;
 }
+.booking-text{
+    margin-right: auto;
+    margin-top: 40px;
+    padding: 5px;
+}
