some style change

--- a/src/components/Blogs/Blogs.css
+++ b/src/components/Blogs/Blogs.css
@@ -27,3 +27,16 @@
     background: #1b1b1b;
     color: #fff;
 }
+
+@media only screen and (max-width: 688px) {
+    .blogs-section{
+        grid-template-columns: repeat(1,1fr);
+    }
+}
+
+@media only screen and (min-width: 689px) and (max-width: 991px) {
+    .blogs-section{
+        grid-template-columns: repeat(2,1fr);
+    }
+
+}
